--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "alphabet-diamond-node",
   "version": "1.0.0",
   "description": "A TW Coding Challenge",
-  "main": "go.js",
+  "main": "go.coffee",
   "scripts": {
-    "test": "test"
+    "test": "mocha",
+    "start": "coffee src/go.coffee"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/watsonarw/alphabet-diamond-node/issues"
   },
-  "homepage": "https://github.com/watsonarw/alphabet-diamond-node#readme"
+  "homepage": "https://github.com/watsonarw/alphabet-diamond-node#readme",
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
+  },
+  "dependencies": {
+    "coffee-script": "^1.10.0"
+  }
 }
